[R] fix carousel indicators vs. menu z-index

--- a/app/assets/stylesheets/base/_menu.sass
+++ b/app/assets/stylesheets/base/_menu.sass
@@ -9,7 +9,7 @@ body > menu
     background-repeat: no-repeat
     padding: 10px
     margin: 0
-    z-index: 1
+    z-index: 20
 
     h1
         font-size: 0
